# bokuteki

./: Cargo.toml
bokuteki-config/template/: bokuteki.css  index.template.html  template.html
docs/: bokuteki.js  sample.html
example-codes/: blockquote.bok  codeblock.bok  foo.bok  import.bok  inline-math.bok  link.bok  mathblock.bok  only-inline-code.bok  only-inline-math.bok  only-paragraph.bok  sample.bok  title.bok
example-codes/foo/: bar.bok
output/: bokuteki.css  sample.html
src/: build.rs  compile.rs  document.rs  katex.rs  lsp.rs  main.rs  parse.rs  print.rs  source.rs  util.rs
src/lsp/: check_document.rs  state.rs
src/source/: range.rs  spec.rs
