[package]
name = "bokuteki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
log = "0.4.0"
simplelog= "0.11.1"
serde_json = "1.0"
lsp-server = "0.5.2"
lsp-types = "0.92.0"
tokio = { version = "1.17.0", features = ["full"] }
